packages/parser/test/parser/E0101.txt
main {
===== err =====
anonymous:1:7: ParseError: E0101 - Expected block statement closing brace
1 | main {
  |       ^
